2005-10-21    <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>

	* avltree.h, dbpAdapter.c, sqlLexer.l, sqlParser.y,
	sqlStatement.c, sqlStatement.h, jdbc/TestClass.java,
	jdbc/com/ibm/wbem/jdbc/CIMCallableStatement.java,
	jdbc/com/ibm/wbem/jdbc/CIMConnection.java,
	jdbc/com/ibm/wbem/jdbc/CIMDatabaseMetaData.java,
	jdbc/com/ibm/wbem/jdbc/CIMDriver.java,
	jdbc/com/ibm/wbem/jdbc/CIMPreparedStatement.java,
	jdbc/com/ibm/wbem/jdbc/CIMResultSet.java,
	jdbc/com/ibm/wbem/jdbc/CIMResultSetMetaData.java, 
	jdbc/com/ibm/wbem/jdbc/CIMStatement.java,
	jdbc/htmlviewer/HFrame.java: 
	Enhancements for the exeperimental JDBC support/SQL adapter.

2005-10-06    <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>

	* httpAdapter.c, dbpAdapter.c, msgqueue.c, 
	sfcCertificateAuthentication.c:
	Bug 1313902. Changed IPC key creation via ftok to use the
	sfcbd binary file instead of '.'. Set creation mode to 0600.

2005-10-05    <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>

	* httpAdapter.c, control.c, sfcb.cfg.pre.in, 
	man/sfcbd.1.pre.in, README, Makefile.am, 
	sfcBasicAuthentication.c, sfcCertificateAuthentication.c: 
	Bug 1308252. Further enhanced the client certifcate based
	authentication by adding certifciate to principal mapping
	via a new loadable library.

2005-10-04  a3schuur

	* httpAdapter.c: Fixed sfcbd hang situation when http port not
	  available

2005-10-02  a3schuur

	* providerDrv.c, support.h: Fixed 1195240  sfcb doesn't close
	  client connection on error
2005-09-30    mihajlov

	* httpAdapter.c, control.c, sfcb.cfg.pre.in, 
	man/sfcbd.1.pre.in: Bug 1308252. Added support for client certificate
	verfication. Introduced new config options and updated man page.

2005-09-27  a3schuur

	* httpAdapter.c: Rearanged DOS detection support

2005-09-27  a3schuur

	* httpAdapter.c: Bug [ 1298807 ] sfcb dos vulnerability Next step
	to detect and reject DOS attacks.  Fist data after accept must
	arrive within 5 seconds, otherwise the request will be rejected.
